Removes 'height'. Seems to fix the image distortion on mobile.

--- a/public/css/flaming-archer.css
+++ b/public/css/flaming-archer.css
@@ -34,7 +34,6 @@ input#day.form-control {
 
 .day-photo img { 
     max-height: 90%; 
-    height: 90%; 
     max-width: 100%; 
     vertical-align: middle; 
 }
